--- a/.github/workflows/psalm.yml
+++ b/.github/workflows/psalm.yml
@@ -11,17 +11,13 @@ on:
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ "main" ]
-  schedule:
-    - cron: '43 7 * * 5'
 
-permissions:
-  contents: read
 
 jobs:
   php-security:
     runs-on: ubuntu-latest
     permissions:
-      contents: read # for actions/checkout to fetch code
+      contents: write # for actions/checkout to fetch code
       security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
       actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
 
