--- a/.github/workflows/psalm.yml
+++ b/.github/workflows/psalm.yml
@@ -12,25 +12,21 @@ on:
     # The branches below must be a subset of the branches above
     branches: [ "main" ]
 
-
 jobs:
-  php-security:
+  psalm:
+    name: Psalm
     runs-on: ubuntu-latest
     permissions:
-      contents: write # for actions/checkout to fetch code
-      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
-      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
-
+      contents: write 
+      security-events: write 
+      actions: read 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
       - name: Psalm Security Scan
-        uses: docker://ghcr.io/psalm/psalm-github-actions
-        with:
-         composer_require_dev: false
-         composer_ignore_platform_reqs: true
-
+        uses: docker://ghcr.io/psalm/psalm-security-scan:5.7.5
+        
       - name: Upload Security Analysis results to GitHub
         uses: github/codeql-action/upload-sarif@v2
         with:
