--- a/.github/workflows/psalm.yml
+++ b/.github/workflows/psalm.yml
@@ -26,6 +26,9 @@ jobs:
 
       - name: Psalm Security Scan
         uses: docker://ghcr.io/psalm/psalm-security-scan:5.7.5
+        with:
+         composer_require_dev: false
+         composer_ignore_platform_reqs: true
         
       - name: Upload Security Analysis results to GitHub
         uses: github/codeql-action/upload-sarif@v2
