--- a/.github/workflows/psalm.yml
+++ b/.github/workflows/psalm.yml
@@ -24,9 +24,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Psalm Security Scan
-        uses: docker://ghcr.io/psalm/psalm-security-scan:5.7.5
+      - name: Psalm
+        uses: docker://ghcr.io/psalm/psalm-github-actions
         with:
+         security_analysis: true
          composer_require_dev: false
          composer_ignore_platform_reqs: true
         
