--- a/.github/workflows/psalm.yml
+++ b/.github/workflows/psalm.yml
@@ -28,7 +28,7 @@ jobs:
         uses: docker://ghcr.io/psalm/psalm-github-actions
         with:
          security_analysis: true
-         composer_require_dev: false
+         composer_require_dev: true
          composer_ignore_platform_reqs: true
         
       - name: Upload Security Analysis results to GitHub
